# chack-next-template

./: .eslintrc.json  .gitignore  LICENSE  README.md  dump-programs.sh  dump_bubblegum.sh  package-lock.json  package.json  tsconfig.base.json
anchor/: Anchor.toml  package.json
anchor/programs/chack_staking/: Cargo.toml
anchor/programs/chack_staking/src/: lib.rs
anchor/programs/counter/: Cargo.toml
anchor/programs/counter/src/: lib.rs
anchor/src/: chack-staking-exports.ts  counter-exports.ts  index.ts
anchor/tests/: chack_staking.spec.ts
web/app/: layout.tsx
web/app/cnft/: page.tsx
web/components/cnft/: cnft-feature.tsx  cnft-ui.tsx
web/components/counter/: counter-data-access.tsx  counter-feature.tsx  counter-ui.tsx
web/components/solana/: solana-provider.tsx
web/components/ui/: ui-layout.tsx
