[package]
name = "chack_staking"
version = "0.1.0"
description = "Staking demo program for cHACK"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chack_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
mpl-bubblegum = "1.2.0"
spl-account-compression = { version="0.2.0", features = ["cpi"] }
